--- a/Launcher/Launcher.csproj
+++ b/Launcher/Launcher.csproj
@@ -195,12 +195,57 @@
     <Content Include="Artwork\WAR.png" />
     <Content Include="WAR.ico" />
   </ItemGroup>
+   <ItemGroup>
+    <PackageReference Include="MSBuildGitHash">
+      <Version>0.3.0</Version>
+    </PackageReference>
+  </ItemGroup>
+   <Target Name="GetGitHash" BeforeTargets="WriteGitHash" Condition="'$(BuildHash)' == ''">
+  <PropertyGroup>
+    <!-- temp file for the git version (lives in "obj" folder)-->
+    <VerFile>$(IntermediateOutputPath)gitver</VerFile>
+  </PropertyGroup>
+ 
+  <!-- write the hash to the temp file.-->
+  <Exec Command="git -C $(ProjectDir) rev-parse --short HEAD --dirty  &gt; $(VerFile)" />
+ 
+  <!-- read the version into the GitVersion itemGroup-->
+  <ReadLinesFromFile File="$(VerFile)">
+    <Output TaskParameter="Lines" ItemName="GitVersion" />
+  </ReadLinesFromFile>
+  <!-- Set the BuildHash property to contain the GitVersion, if it wasn't already set.-->
+  <PropertyGroup>
+    <BuildHash>@(GitVersion)</BuildHash>
+  </PropertyGroup>    
+</Target><Target Name="WriteGitHash" BeforeTargets="CoreCompile">
+  <!-- names the obj/.../CustomAssemblyInfo.cs file -->
+  <PropertyGroup>
+    <CustomAssemblyInfoFile>$(IntermediateOutputPath)CustomAssemblyInfo.cs</CustomAssemblyInfoFile>
+  </PropertyGroup>
+  <!-- includes the CustomAssemblyInfo for compilation into your project -->
+  <ItemGroup>
+    <Compile Include="$(CustomAssemblyInfoFile)" />
+  </ItemGroup>
+  <!-- defines the AssemblyMetadata attribute that will be written -->
+  <ItemGroup>
+    <AssemblyAttributes Include="AssemblyMetadata">
+      <_Parameter1>GitHash</_Parameter1>
+      <_Parameter2>$(BuildHash)</_Parameter2>
+    </AssemblyAttributes>
+  </ItemGroup>
+  <!-- writes the attribute to the customAssemblyInfo file -->
+  <WriteCodeFragment Language="C#" OutputFile="$(CustomAssemblyInfoFile)" AssemblyAttributes="@(AssemblyAttributes)" />
+</Target>
+
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
   </Target>
+
+
+
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
