--- a/WorldServer/WorldServer.csproj
+++ b/WorldServer/WorldServer.csproj
@@ -256,11 +256,13 @@
     <Compile Include="World\Battlefronts\BattlefrontList.cs" />
     <Compile Include="World\Battlefronts\Bounty\BountyException.cs" />
     <Compile Include="World\Battlefronts\Bounty\CharacterBounty.cs" />
+    <Compile Include="World\Battlefronts\Bounty\ContributionFactor.cs" />
     <Compile Include="World\Battlefronts\Bounty\ContributionManager.cs" />
     <Compile Include="World\Battlefronts\Bounty\BountyManager.cs" />
     <Compile Include="World\Battlefronts\Bounty\IBountyManager.cs" />
     <Compile Include="World\Battlefronts\Bounty\IContributionManager.cs" />
     <Compile Include="World\Battlefronts\Bounty\IImpactMatrixManager.cs" />
+    <Compile Include="World\Battlefronts\Bounty\PlayerContribution.cs" />
     <Compile Include="World\Battlefronts\Bounty\PlayerImpact.cs" />
     <Compile Include="World\Battlefronts\Bounty\ImpactMatrixManager.cs" />
     <Compile Include="World\Battlefronts\Bounty\RenownBandRVRObjectiveTick.cs" />
