--- a/WorldServer.Test/packages.config
+++ b/WorldServer.Test/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FakeItEasy" version="4.6.0" targetFramework="net452" />
-  <package id="NLog" version="4.5.6" targetFramework="net452" />
+  <package id="FakeItEasy" version="4.7.1" targetFramework="net452" />
+  <package id="NLog" version="4.5.7" targetFramework="net452" />
+  <package id="xunit.abstractions" version="2.0.2" targetFramework="net452" />
+  <package id="xunit.analyzers" version="0.10.0" targetFramework="net452" />
+  <package id="xunit.core" version="2.4.0" targetFramework="net452" />
+  <package id="xunit.extensibility.core" version="2.4.0" targetFramework="net452" />
+  <package id="xunit.extensibility.execution" version="2.4.0" targetFramework="net452" />
 </packages>
