--- a/Launcher/Launcher.csproj
+++ b/Launcher/Launcher.csproj
@@ -192,6 +192,9 @@
     <Content Include="WAR.ico" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="NLog">
+      <Version>4.5.7</Version>
+    </PackageReference>
     <PackageReference Include="System.Net.Http">
       <Version>4.3.3</Version>
     </PackageReference>
