--- a/WorldServer/NLog.config
+++ b/WorldServer/NLog.config
@@ -22,6 +22,8 @@
             layout="${longdate} ${uppercase:${level}} ${callsite:includeNamespace=false} :: ${message}" />
     <target name="battlefrontLogToFile" xsi:type="File" fileName="${basedir}/logs/Campaign_${shortdate}.log"
             layout="${longdate} ${uppercase:${level}} ${callsite:includeNamespace=false} :: ${message}" />
+    <target name="guildLogToFile" xsi:type="File" fileName="${basedir}/logs/Guild_${shortdate}.log"
+            layout="${longdate} ${uppercase:${level}} ${callsite:includeNamespace=false} :: ${message}" />
 
     <target name="logconsole" xsi:type="ColoredConsole" layout="${shortdate} ${uppercase:${level}} ${message}" />
   </targets>
@@ -31,6 +33,7 @@
     <logger name="RewardLogger" minlevel="Debug" writeTo="rewardLogToFile" />
     <logger name="RVRProgressionLogger" minlevel="Debug" writeTo="rvrLogToFile" />
     <logger name="BattlefrontLogger" minlevel="Debug" writeTo="battlefrontLogToFile" />
+    <logger name="GuildLogger" minlevel="Debug" writeTo="guildLogToFile" />
     <logger name="*" minlevel="Debug" writeTo="logfile" />
     <logger name="*" minlevel="Debug" writeTo="logconsole" />
   </rules>
