--- a/CharacterUtility/packages.config
+++ b/CharacterUtility/packages.config
@@ -1,24 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BouncyCastle" version="1.8.3.1" targetFramework="net472" />
-  <package id="CommandLineParser" version="2.4.3" targetFramework="net472" />
-  <package id="Dapper" version="1.60.1" targetFramework="net472" />
-  <package id="Evolve" version="2.3.0" targetFramework="net472" />
-  <package id="Google.Protobuf" version="3.7.0" targetFramework="net472" />
-  <package id="K4os.Compression.LZ4" version="1.1.11" targetFramework="net472" />
-  <package id="K4os.Compression.LZ4.Streams" version="1.1.11" targetFramework="net472" />
+  <package id="BouncyCastle" version="1.8.6.1" targetFramework="net48" />
+  <package id="CommandLineParser" version="2.8.0" targetFramework="net48" />
+  <package id="Dapper" version="2.0.78" targetFramework="net48" />
+  <package id="Evolve" version="2.4.0" targetFramework="net48" />
+  <package id="Google.Protobuf" version="3.14.0" targetFramework="net48" />
+  <package id="K4os.Compression.LZ4" version="1.2.6" targetFramework="net48" />
+  <package id="K4os.Compression.LZ4.Streams" version="1.2.6" targetFramework="net48" />
   <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net472" />
-  <package id="Microsoft.DotNet.PlatformAbstractions" version="2.1.0" targetFramework="net452" />
-  <package id="Microsoft.Extensions.DependencyModel" version="2.1.0" targetFramework="net452" />
-  <package id="MySql.Data" version="8.0.20" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net48" />
+  <package id="Microsoft.DotNet.PlatformAbstractions" version="3.1.6" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyModel" version="5.0.0" targetFramework="net48" />
+  <package id="MySql.Data" version="8.0.22" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
-  <package id="NLog" version="4.6.8" targetFramework="net48" />
+  <package id="NLog" version="4.7.5" targetFramework="net48" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net472" />
-  <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net452" />
+  <package id="System.Text.Encodings.Web" version="5.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="5.0.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="xunit.abstractions" version="2.0.3" targetFramework="net452" />
   <package id="xunit.analyzers" version="0.10.0" targetFramework="net452" />
   <package id="xunit.assert" version="2.4.1" targetFramework="net452" />
