--- a/Common/packages.config
+++ b/Common/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FakeItEasy" version="5.1.0" targetFramework="net472" />
+  <package id="Castle.Core" version="4.4.1" targetFramework="net48" />
+  <package id="FakeItEasy" version="6.2.1" targetFramework="net48" />
   <package id="xunit.abstractions" version="2.0.3" targetFramework="net452" />
   <package id="xunit.extensibility.core" version="2.4.1" targetFramework="net452" />
 </packages>
